cleanup: more test cleanup and formatting